# MultiSnake

./: CMakeLists.txt  SnakeTheGame  main.cpp
SnakeGame/: CMakeLists.txt  SnakeGame.cpp  SnakeGame.h
